# PicassoPy

./: .gitignore  PicassoPy_main.py  README.md  __init__.py  picassopy_test.py  pyproject.toml  requirements.txt  setup.py
config/: pollynet_processing_chain_config_rsd2_24h_exp.json
docs/: Makefile
docs/source/: README.md  conf.py  index.rst
docs/source/_templates/autosummary/: module.rst
docs/source/userguide/: PicassoPy_data_flow.drawio  PicassoPy_data_flow.drawio.html  configfiles.rst  data_flow.rst  index.rst  preprocess.rst
lib/calibration/: lidarconstant.py  polarization.py  rayleighfit.py
lib/cloudmask/: cloudscreen.py  profilesegment.py
lib/config/: json2nc-mapper_BG.json  json2nc-mapper_RCS.json  json2nc-mapper_SNR.json  json2nc-mapper_profile.json  polly_global_config.json  polly_global_defaults.json  pollynet_processing_chain_config.json
lib/interface/: .picassoProc.py.swp  picassoProc.py
lib/io/: loadConfigs.py  readMeteo.py  readPollyRawData.py
lib/misc/: .pollyChannelTags.py.swp  helper.py  json2nc_mapping.py  molecular.py  pollyChannelTags.py
lib/preprocess/: pollyPreprocess.py
lib/qc/: overlap.py  overlapCor.py  overlapEst.py  pollySaturationDetect.py  transCor.py
lib/retrievals/: angstroem.py  collection.py  depolarization.py  highres.py  klettfernald.py  quasi.py  quasiV1.py  quasiV2.py  raman.py  ramanhelpers.py
log/: logger.py
ppcpy/: __init__.py  _version.py
ppcpy/calibration/: lidarconstant.py  polarization.py  rayleighfit.py
ppcpy/cloudmask/: cloudscreen.py  profilesegment.py
ppcpy/config/: json2nc-mapper_BG.json  json2nc-mapper_NR_att_bsc.json  json2nc-mapper_NR_profiles.json  json2nc-mapper_OC_att_bsc.json  json2nc-mapper_OC_profiles.json  json2nc-mapper_RCS.json  json2nc-mapper_SNR.json  json2nc-mapper_SNR_simple.json  json2nc-mapper_att_bsc.json  json2nc-mapper_profiles.json  json2nc-mapper_vol_depol.json  json2nc_translator.json  polly_global_config.json  polly_global_defaults.json  polly_retrievals_meta_monitoring.json  pollynet_processing_chain_config.json
ppcpy/interface/: __init__.py  picassoProc.py
ppcpy/io/: __init__.py  loadConfigs.py  readMeteo.py  readPollyRawData.py  sql_interaction.py  write2nc.py
ppcpy/misc/: helper.py  json2nc_mapping.py  molecular.py  plot.py  pollyChannelTags.py  startscreen.py
ppcpy/preprocess/: pollyPreprocess.py  profiles.py
ppcpy/qc/: overlapCor.py  overlapEst.py  pollySaturationDetect.py  qualityMask.py  transCor.py
ppcpy/retrievals/: angstroem.py  depolarization.py  highres.py  klettfernald.py  quasi.py  quasiV1.py  quasiV2.py  raman.py  ramanhelpers.py
tests/: interactive_test.ipynb  picassopy_minimal_met.py  picassopy_test_PC.py  picassopy_test_laptop.py  picassopy_test_rsd2.py  picassopy_testing.py  pollynet_testing.m  test_case_cpv_2024-08-21.ipynb  test_case_tjk_2025-08-23.ipynb
tests/test_case_config/: pollynet_processing_chain_config_links.xlsx  pollynet_processing_chain_config_test.json  pollyxt_cpv_config_20230927.json  pollyxt_tjk_config_20231023.json
