
[build-system]
requires = ["setuptools>=61.0", "wheel", 
            ]
build-backend = "setuptools.build_meta"


[project]
name = "PicassoPy"
version = "0.1.1"
authors = [
  { name="Andi Klamt", email="klamt@tropos.de" },
  { name="Martin Radenz", email="radenz@tropos.de" },
]
description='Data cube for handling atmospheric observations of profiling remote sensing instruments.'
requires-python = ">=3.8"
license = {text = "MIT License"}
classifiers = [
  'Development Status :: 1 - Planning',
  'Intended Audience :: Science/Research',
  'License :: OSI Approved :: BSD License',  
  'Operating System :: POSIX :: Linux',        
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.8',
]
readme = 'README.md'
dependencies = [
  "numpy", 
  "scipy",
  "netCDF4",
  "xarray",
  "pandas",
  "openpyxl", # might be an optional dependency
  "GitPython",
]

[tool.setuptools.packages]
find = {}

[project.optional-dependencies]
doc = [
  "sphinx",
  "pydata_sphinx_theme",
]


[tool.sphinx-pyproject]
# -- General configuration ---------------------------------------------------
# https://www.sphinx-doc.org/en/master/usage/configuration.html#general-configuration
project = "PicassoPy" # for some reason the project name has to be repeated here
coverage_show_missing_items = true
extensions = [
  #"autoapi.extension", not quite sure yet if to use autoapi, apidoc or autodoc...
  "sphinx.ext.autodoc",
  "sphinx.ext.autosummary",
  #"sphinx_autodoc_typehints",
  "sphinx.ext.viewcode",
  "sphinx.ext.coverage",
  "sphinx.ext.mathjax",
  "sphinx.ext.viewcode",
  "sphinx.ext.todo",
  "sphinx.ext.napoleon",
  "myst_parser"
  #"sphinx.ext.autosectionlabel",
  #"recommonmark",
]
sphinx_rtd_size_width = "90%"
source_suffix = {'.rst' = 'restructuredtext', '.md' = 'markdown'}
templates_path = ["_templates"]
exclude_patterns = ["_build", "Thumbs.db", ".DS_Store"]
auto_doc_default_options = {'autosummary' = true}
# -- Options for HTML output -------------------------------------------------
# https://www.sphinx-doc.org/en/master/usage/configuration.html#options-for-html-output
#html_theme = "sphinx_rtd_theme"
html_theme = "pydata_sphinx_theme"
#html_style = "css/custom.css"
html_static_path = ["_static"]
#html_theme_options = {'sticky_navigation' = true, 'includehidden' = true, 'titles_only' = false}
html_theme_options = {"external_links"= [{"name" = "PollyNET", "url" = "https://polly.tropos.de/"}]}
autosummary_generate = true
autoclass_content = "both"

[tool.sphinx-pyproject.autodoc_default_options]
# exclude-members = """
#   __weakref__,
#   __sizeof__,
#   __hash__,
#   __module__,
#   __dict__,
#   __annotations__,
#   __orig_bases__,
#   __parameters__,
#   __abstractmethods__,
#   __non_callable_proto_members__,
#   __protocol_attrs__,
#   __subclasshook__,
#   __dataclass_fields__,
#   __post_init__,
#   __dataclass_params__,
#   __match_args__,
#   __str__,
#   __repr__"""
members = true
member-order = 'bysource'
# special-members = true
undoc-members = false
